--- a/css/styles.css
+++ b/css/styles.css
@@ -138,9 +138,28 @@ color: var(--background-color);
 
 }
 
-.nav .nav-link.current {
+.nav-link.current {
+    position: relative;
     color: var(--text-accent-color);
+    
+
+
 }
+
+.nav-link.current::after {
+    position: absolute;
+    bottom: 0;
+
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--text-accent-color);
+    border-radius: 2px;
+
+
+}
+
 .nav-link {
     display: block; 
     padding-top: 32px;
@@ -154,15 +173,16 @@ color: var(--background-color);
     letter-spacing: 0.02em;
     text-decoration: none;
     list-style-type: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover, .nav-link:focus {
     color: var(--text-accent-color);
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+   
 } 
+
+
 
 .contact {
     display: flex;
@@ -192,6 +212,8 @@ color: var(--background-color);
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -269,7 +291,9 @@ color: var(--background-color);
         text-align: center;
         letter-spacing: 0.06em;
 
-        cursor: pointer
+        cursor: pointer;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover, .hero-button:focus {
@@ -288,6 +312,12 @@ color: var(--background-color);
         height: 100%;
         background-color: rgba(0, 0, 0, 0.2);
 
+        z-index: 2;
+
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+
     }
 
     .backdrop.is-hidden {
@@ -297,25 +327,31 @@ color: var(--background-color);
 
     }
 
+    .backdrop.is-hidden .modal {
+        transform: translate(-50%, -50%) scale(0);
+    }
+
     .modal {
 
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%) scale(1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        display: flex;
+        justify-content: flex-end;
+         align-items: flex-start;
 
         min-height: 581px;
         min-width: 528px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-start;
-       
-
+        
+        
         background-color: var(--background-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
-        background-image: url(../images/cross_close.svg#cross);
-        background-position: 50% 50%;
+
+        
        
    
     }
@@ -535,6 +571,9 @@ color: var(--background-color);
     border-radius: 50%;
     background-color: var(--background-color);
     fill: #AFB1B8;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
    
 }
@@ -576,6 +615,7 @@ color: var(--background-color);
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-logo-client:hover, .icon-logo-client:focus {
@@ -614,6 +654,10 @@ color: var(--background-color);
     font-size: 16px;
     line-height: 1.63;
     cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover, .portfolio-button:focus {
@@ -656,6 +700,10 @@ color: var(--background-color);
 text-decoration: none;
 display: block;
 
+
+
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .project-link:hover, .project-link:focus {
@@ -663,11 +711,68 @@ display: block;
     
 }
 
+
 .project-image {
     margin-bottom: 20px;
 
     background-color: #EEEEEE;
 
+}
+
+.project-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.project-link:hover .project-box {
+    transform: translateY(0);
+
+
+}
+
+.project-text {
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--background-color);
+    padding-top: 63px;
+    padding-bottom: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
+
+}
+
+.project-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+
+
+.project-overlay::before {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+
+}
+
+.project-link:hover .project-overlay::before {
+    transform: translateY(0);
 }
 
 .project-border {
@@ -734,18 +839,18 @@ display: block;
     line-height: 1.71;
     text-decoration: none;
     list-style-type: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   
     }
 
 .adress-list:focus,
 .address-list:hover {
+
     color: var(--text-accent-color);
 
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    
+      
 }
 
 .googlemap {
@@ -808,6 +913,7 @@ display: block;
     fill: var(--background-color);
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-footer-link:hover, .icon-footer-link:focus {
